--- a/Rendimiento Relativo.ipynb
+++ b/Rendimiento Relativo.ipynb
@@ -8,9 +8,8 @@
     "\n",
     "# <center> Econometria Financiera <center>\n",
     "\n",
-    "<h2><center>Ejercicios Práctica - Tarea #2</center></h2>\n",
     "\n",
-    "<center> Ketherine Jimenez 1106918 - Aura Gonzalez 1106920 - Eddily Sanchez 1096853<center>\n",
+    "<center>  Aura Gonzalez >\n",
     "<center>ProShares Hedge Replication ETF [UV6939].<center>"
    ]
   },
