Update Retornos - CAPM.ipynb

--- a/Retornos - CAPM.ipynb
+++ b/Retornos - CAPM.ipynb
@@ -7,10 +7,9 @@
    "source": [
     "# <center> Econometria Financiera <center>\n",
     "    \n",
-    "    \n",
-    "<h2><center> Tarea #4</center></h2>\n",
+
     "\n",
-    "<center> Ketherine Jimenez 1106918 - Aura Gonzalez 1106920 - Eddily Sanchez 1096853<center>\n",
+    "<center> Aura Gonzalez 1106920 <center>\n",
     "\n",
     "    "
    ]
