--- a/Volatibilidad.ipynb
+++ b/Volatibilidad.ipynb
@@ -6,10 +6,9 @@
    "source": [
     "# <center> Econometria Financiera <center>\n",
     "    \n",
-    "    \n",
-    "<h2><center> Tarea #4</center></h2>\n",
+
     "\n",
-    "<center> Ketherine Jimenez 1106918 - Aura Gonzalez 1106920 - Eddily Sanchez 1096853<center>\n",
+    "<center>  Aura Gonzalez 1106920 <center>\n",
     "\n",
     "**The Risk of Stocks in the Long-Run: The Barnstable College Endowment [HBS 9-296073].**"
    ]
